--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "RCSP"
+name = "ConstrainedShortestPaths"
 uuid = "b3798467-87dc-4d99-943d-35a1bd39e395"
 authors = ["BatyLeo and contributors"]
 version = "0.1.0"
