--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
+ConstrainedShortestPaths = "b3798467-87dc-4d99-943d-35a1bd39e395"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-RCSP = "b3798467-87dc-4d99-943d-35a1bd39e395"
