--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,8 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 DataStructures = "0.18"
 Graphs = "1"
 SimpleTraits = "0.9"
+SparseArrays = "<0.0.1,1"
+Statistics = "<0.0.1,1"
 julia = "1.7"
 
 [extras]
